feat(instant)!: cut the additive tier — body-only everywhere
The instant lane no longer patches structural changes on any JVM.
Added/removed methods, new classes, and nest changes escalate as
UNSAFE with reasons naming the member (METHOD_ADDED/METHOD_REMOVED/
CLASS_ADDED/NEST_CHANGE); the run-once and annotation gates keep their
sharper why-it-could-never-take-effect reasons. BODY_ONLY keeps all
verification machinery: the CRC load-hook agent, source-bytes
fallback, baseline tracker, and escalation gates.

Deleted whole: the companion's new-class path (makeLoadable, the
overlay-dir addURL splice, DevPluginClassLoader.defineNew, the overlay
wipes and path constant), ReflectionFrameworkList (body-only patches
never change the member set, so scan-once-by-name frameworks have
nothing to miss), the JBR/flag detection in RedefineCapabilities
(capability is agent-present/absent), and the java.net add-opens that
existed only for the splice.

Wire (protocol v4, unreleased, amended in place — no v5): instantSwap
loses newClasses; instantReport loses defined; the welcome capability
is none/body-only. Golden add-a-method fixtures stay and now pin
escalation-with-named-reason for both javac and kotlinc — including
that the kotlinc reason names the user's method, not @NotNull noise.

dev.jbr/JbrDownloader predate this branch and remain: a JBR server
still gets -XX:+AllowEnhancedClassRedefinition for the user's own IDE
tooling; the instant tier just never uses that headroom.

Rationale: ADR 0005 amendment (892a067). Hotswap tools compete on
when they work; paperplane competes on never being wrong.